# trae-cn-manager

./: .gitignore  README.md  pyproject.toml  test_auto_slider.py  test_auto_slider_v2.py  test_captcha_pipeline.py  test_captcha_v2.py  test_debug_captcha_trigger.py  test_debug_drag_result.py  test_debug_send_code.py  test_debug_slider.py  test_e2e_captcha.py  test_examine_captcha_dom.py  test_full_drag.py  test_iframe_debug.py  test_iframe_v2.py  test_slider.py  test_slider_precise.py  test_slider_quick.py  test_slider_v4.py
scripts/: e2e_sms_test.py  multi_phone_e2e_test.py  test_freeotp_otp.py  test_smscodeonline_otp.py
trae_cn_manager/: __init__.py  auto_slider.py  cli.py  config.py  db.py  machine.py  models.py  process_ctl.py  register.py  sms_client.py  switcher.py  trae_api.py  vault.py
