[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trae-cn-manager"
version = "0.1.0"
description = "Trae CN automated account management — register, switch, and inspect Trae CN accounts."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TCN Contributors" },
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "sqlmodel>=0.0.8",
    "cryptography>=41.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "platformdirs>=3.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[project.scripts]
tcn = "trae_cn_manager.cli:app"

[tool.setuptools]
packages = ["trae_cn_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
